# editor_ai

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
core/: __init__.py  document.py  llm.py  models.py
rules/: english.txt  greek.txt
ui/: analysis.py  components.py  main_content.py  results.py  sidebar.py  styles.py  utils.py
