[tool.poetry]
name = "editor-ai"
version = "0.1.0"
description = "AI powered document editor with Greek/English grammar enforcement"
authors = ["EditorAI Team"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "^3.10"
google-genai = "^1.0.0"
streamlit = "^1.40.0"
pydantic = "^2.10.0"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pyright = "^1.1.390"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["core", "app.py"]
exclude = ["**/__pycache__"]
reportOptionalMemberAccess = "warning"
reportGeneralTypeIssues = "warning"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "W293",   # blank line contains whitespace (false positives in multiline strings)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
